--- a/src/app/@shared/components/edit-community/edit-community.component.html
+++ b/src/app/@shared/components/edit-community/edit-community.component.html
@@ -66,7 +66,7 @@
       (ngSubmit)="saveChanges()"
       (change)="onChangeData()"
     >
-      <c-row class="justify-content-center mt-2">
+      <!-- <c-row class="justify-content-center mt-2">
         <c-col md="6">
           <label>First Name</label>
           <input
@@ -85,15 +85,15 @@
             type="text"
           />
         </c-col>
-      </c-row>
+      </c-row> -->
       <c-row class="justify-content-center mt-2">
         <c-col md="6">
-          <label>Username</label>
+          <label>userName</label>
           <input
             cFormControl
             name="uname"
             type="text"
-            formControlName="Username"           
+            formControlName="userName"           
           />
         </c-col>
         <c-col md="6">
@@ -102,7 +102,7 @@
             cFormControl
             name="email"
             type="email"
-            [(ngModel)]="memberDetails.Email"
+            [(ngModel)]="memberDetails.email"
             [ngModelOptions]="{ standalone: true }"
             disabled
           />
@@ -116,7 +116,7 @@
         </c-col>
       </c-row>
       <c-row class="justify-content-center mt-2">
-        <c-col md="6">
+        <!-- <c-col md="6">
           <label>Phone</label>
           <input
             cFormControl
@@ -124,7 +124,7 @@
             formControlName="MobileNo"
             type="text"
           />
-        </c-col>
+        </c-col> -->
         <c-col md="6" class="d-grid">
           <label>Country</label>
           <select
@@ -179,7 +179,7 @@
           <label for="">Make Community Admin</label>
           <ng-select
             [items]="userList"
-            bindLabel="Username"
+            bindLabel="userName"
             bindValue="Id"
             [multiple]="true"
             placeholder="Select user"
@@ -190,11 +190,11 @@
                 <img
                   height="20"
                   width="20"
-                  [src]="item.ProfilePicName"
+                  [src]="item.profilePicName"
                   class="me-1"
                   onerror="this.onerror=null;this.src='/assets/img/avatars/placeholder-user.png';"
                 />
-                <span>{{ item.Username }}</span>
+                <span>{{ item.userName }}</span>
               </div>
             </ng-template>
           </ng-select>
@@ -209,7 +209,7 @@
                 class="w-48-px h-48-px rounded-4"
                 loading="lazy"
                 data-src="{{
-                  member?.ProfilePicName ||
+                  member?.profilePicName ||
                     '/assets/images/avtar/placeholder-user.png'
                 }}"
                 onerror="this.onerror=null;this.src='/assets/images/avtar/placeholder-user.png'"
@@ -218,7 +218,7 @@
               <div
                 class="d-flex flex-column justify-content-center align-items-start w-100"
               >
-                <p class="mb-1">{{ member?.Username }}</p>
+                <p class="mb-1">{{ member?.userName }}</p>
                 <span class="font-12-px description">{{
                   member?.isAdmin === "Y" ? "Admin" : "Member"
                 }}</span>
